--- a/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -22,7 +22,7 @@
     <link rel="icon" type="image/png" href="../assets/img/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>
-        Now UI Dashboard by Creative Tim
+        KGS LMS Dashboard
     </title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
     <!--     Fonts and icons     -->
@@ -33,7 +33,7 @@
     <link href="~/Dashboard/assets/css/bootstrap.min.css" rel="stylesheet" />
     @*<link href="../assets/css/now-ui-dashboard.css?v=1.5.0" rel="stylesheet" />*@
     <link href="~/Dashboard/assets/css/now-ui-dashboard.css" rel="stylesheet" />
-
+    <link href="~/Dashboard/assets/css/classStyle.css" rel="stylesheet" />
     <!-- CSS Just for demo purpose, don't include it in your project -->
     @*<link href="../assets/demo/demo.css" rel="stylesheet" /> Comment By Absar*@
 </head>
@@ -44,17 +44,17 @@
                 Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
             -->
             <div class="logo">
-                <a href="http://www.creative-tim.com" class="simple-text logo-mini">
-                    CT
+                <a asp-area="admin" asp-controller="dashboard" asp-action="index" class="simple-text logo-mini">
+                    KGS
                 </a>
-                <a href="http://www.creative-tim.com" class="simple-text logo-normal">
-                    Creative Tim
+                <a asp-area="admin" asp-controller="dashboard" asp-action="index" class="simple-text logo-normal">
+                    Karachi Grammer School
                 </a>
             </div>
             <div class="sidebar-wrapper" id="sidebar-wrapper">
                 <ul class="nav">
                     <li class="active ">
-                        <a href="./dashboard.html">
+                        <a asp-area="admin" asp-controller="dashboard" asp-action="index">
                             <i class="now-ui-icons design_app"></i>
                             <p>Dashboard</p>
                         </a>
@@ -62,7 +62,7 @@
                     <li>
                         <a href="./class.html">
                             <i class="now-ui-icons education_atom"></i>
-                            <p>Class</p>
+                            <p>Class / Section</p>
                         </a>
                     </li>
                     <li>
