--- a/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -129,6 +129,7 @@
             // Javascript method's body can be found in assets/js/demos.js
             demo.initDashboardPageCharts();
 
-        });</script>
+        });
+    </script>
 </body>
 </html>
