--- a/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -80,18 +80,13 @@
 
 
                     <li class="has-child">
-                        <a href='#'>
+                        <a asp-area="admin" asp-controller="subject" asp-action="index">
                             <i class="now-ui-icons education_atom"></i>
                             <p>Subject </p>
                         </a>
 
-                        <ul>
-                            <li><a>Add Subject</a></li>
-                            <li><a href='#'>Assign Subject</a></li>
-
-
-                        </ul>
                     </li>
+
                     <li class="has-child">
                         <a href='#'>
                             <i class="now-ui-icons education_atom"></i>
