--- a/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -94,8 +94,8 @@
                         </a>
 
                         <ul>
-                            <li><a>Add Teacher</a></li>
-                            <li><a href='#'>Assign Subject</a></li>
+                            <li><a asp-area="admin" asp-controller="teacher" asp-action="addTeacher">Add Teacher</a></li>
+                            <li><a asp-area="admin" asp-controller="teacher" asp-action="index">Teachers List</a></li>
 
 
                         </ul>
