Assign Subject To Class Completed

--- a/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -48,12 +48,11 @@
                 Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
             -->
             <div class="logo">
-                <a asp-area="admin" asp-controller="dashboard" asp-action="index" class="simple-text logo-mini">
-                    KGS
+                <a href="#" class="">
+                    <img src="~/Dashboard/assets/img/logo-new_03.png" alt="" class="main-logo">
+                    
                 </a>
-                <a asp-area="admin" asp-controller="dashboard" asp-action="index" class="simple-text logo-normal">
-                    Karachi Grammer School
-                </a>
+
             </div>
             <div class="sidebar-wrapper" id="sidebar-wrapper">
                 <ul class="nav navigation">
