--- a/LMS/Areas/Admin/Views/AssignSubject/AddClassSubject.cshtml
+++ b/LMS/Areas/Admin/Views/AssignSubject/AddClassSubject.cshtml
@@ -115,40 +115,39 @@
                                     </div>
 
                                     <br />
-                                    <table id="assignClassSubjectpage" class="table table-striped table-hover table-sm" style="width:100%">
-                                        <thead>
-                                            <tr>
-                                                <th><input type="checkbox" class="checkbox-radios" /></th>
-                                                <th>Subject Name</th>
-                                                <th></th>
 
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-
-                                            @*@if (Model != null)
-                                            {
-                                                @for (int item = 0; item < Model.Count; item++)
-                                                {
+                                    <div class="row">
+                                        <div class="col-md-4 pr-1">
+                                            <table id="assignClassSubjectpage" class="table table-striped table-hover table-sm" style="width:100%">
+                                                <thead>
                                                     <tr>
-                                                        <td><input type="checkbox" class="checkbox-radios" /></td>
-                                                        <td>@Model[item].Subject_Name</td>
-                                                        <td><input type="hidden" class="Subject_Id" value="@Model[item].Subject_Id" /></td>
+                                                        <th><input type="checkbox" class="checkbox-radios" /></th>
+                                                        <th>Subject Name</th>
+                                                        <th></th>
+
                                                     </tr>
-                                                }
-                                            }*@
+                                                </thead>
+                                                <tbody>
+
+                                                    @if (Model != null)
+                                                    {
+                                                        @for (int item = 0; item < Model.Subjects.Count; item++)
+                                                        {
+                                                            <tr>
+                                                                <td><input type="checkbox" class="checkbox-radios" name="lstSubject" value="@Model.Subjects[item].Subject_Id" /></td>
+                                                                <td>@Model.Subjects[item].Subject_Name</td>
+                                                                <td><input type="hidden" class="Subject_Id" value="@Model.Subjects[item].Subject_Id" /></td>
+                                                            </tr>
+                                                        }
+                                                    }
 
 
-                                            @foreach (var item in Model.Subjects)
-                                            {
-                                                <tr>
-                                                    <td><input type="checkbox" class="checkbox-radios" /></td>
-                                                    <td>@item.Subject_Name</td>
-                                                    <td><input type="hidden" class="Subject_Id" value="@item.Subject_Id" /></td>
-                                                </tr>
-                                            }
-                                        </tbody>
-                                    </table>
+                                                </tbody>
+                                            </table>
+
+                                        </div>
+                                    </div>
+
 
                                     <div class="row">
                                         <div class="col-md-4 pr-1">
@@ -157,14 +156,14 @@
                                             </div>
                                         </div>
 
-                                        
-                                    </div>
-
-
-                                    <div class="clearfix">
 
                                     </div>
-                                </form>
+
+
+                                        <div class="clearfix">
+
+                                        </div>
+</form>
                             </div>
                         </div>
 
