--- a/LMS/Areas/Admin/Views/AssignSubject/Index.cshtml
+++ b/LMS/Areas/Admin/Views/AssignSubject/Index.cshtml
@@ -84,11 +84,11 @@
                                 <div class="table-title">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <h2>Manage <b>Class Subjects</b></h2>
+                                            <h2>Assign Subject To Particular <b>Class & Section</b></h2>
                                         </div>
                                         <div class="col-md-6 pull-right">
-                                            <a asp-area="admin" asp-controller="assignSubject" asp-action="addClassSubject" class="btn btn-success" ><i class="material-icons">&#xE147;</i> <span>Add New Class Subjects</span></a>
-                                            <a href="#deleteClassSectionModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>
+                                            <a asp-area="admin" asp-controller="assignSubject" asp-action="addClassSubject" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Class Subjects</span></a>
+                                            <a href="#deleteClassSubjectModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -108,15 +108,15 @@
                                         {
                                             <tr>
                                                 <td>@item.ClassSubject_Id</td>
-                                                <td>@item.Class_Name</td>
+                                                <td>@(item.Class_Name + '-' + item.Section_Name)</td>
                                                 <td>@item.Section_Name</td>
                                                 <td>@item.Subject_Name</td>
                                                 <td>
-                                                    <a href="#editClassSectionModal" class="edit" id="edit" data-toggle="modal">
+                                                    <a href="#editClassSubjectModal" class="edit" id="edit" data-toggle="modal">
                                                         <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i>
                                                     </a>
 
-                                                    <a href="#deleteClassSectionModal" class="delete" id="delete" data-toggle="modal">
+                                                    <a href="#deleteClassSubjectModal" class="delete" id="delete" data-toggle="modal">
                                                         <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i>
                                                     </a>
 
@@ -136,19 +136,58 @@
 
 
 
-                       
 
 
-                        
+                        <!-- Edit Modal HTML -->
+                        <div id="editClassSubjectModal" class="modal fade">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <form method="post" asp-controller="assignSubject" asp-action="editClassSubject">
+                                        <div class="modal-header">
+                                            <h4 class="modal-title">Edit Class Subject</h4>
+                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <div class="form-group">
+                                                <label>ID</label>
+                                                <input type="text" class="form-control" required="" id="ClassSubject_Id" disabled="disabled">
+                                            </div>
+                                            <div class="form-group">
+                                                <label>Class Name</label>
+                                                <select id="Class_Id" name="Class_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Class, "Class_Id", "Class_Name"))"></select>
+                                            </div>
+
+                                            <div class="form-group">
+                                                <label>Section Name</label>
+                                                <select id="Section_Id" name="Section_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Section, "Section_Id", "Section_Name"))"></select>
+                                            </div>
+
+                                            <div class="form-group">
+                                                <label>Subject Name</label>
+                                                <select id="Subject_Id" name="Subject_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Subject, "Subject_Id", "Subject_Name"))"></select>
+                                            </div>
+
+                                        </div>
+                                        <div class="modal-footer">
+                                            <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                                            <input type="submit" class="btn btn-info" value="Save">
+                                            @*Added By Absar*@
+                                            <input type="hidden" name="ClassSubject_Id" id="ClassSubject_Id" />
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+
 
 
                         <!-- Delete Modal HTML -->
-                        <div id="deleteClassSectionModal" class="modal fade">
+                        <div id="deleteClassSubjectModal" class="modal fade">
                             <div class="modal-dialog">
                                 <div class="modal-content">
-                                    <form method="post" asp-controller="assignSection" asp-action="deleteClassSection">
+                                    <form method="post" asp-controller="assignSubject" asp-action="deleteClassSubject">
                                         <div class="modal-header">
-                                            <h4 class="modal-title">Delete Class Section</h4>
+                                            <h4 class="modal-title">Delete Class Subject</h4>
                                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                                         </div>
                                         <div class="modal-body">
@@ -223,28 +262,29 @@
         //Get ClassSubject_Id for Delete Added By Absar
         $('#assignClassSubjectpage #delete').on('click', function () {
             var ClassSubject_Id = $(this).parent().find('.ClassSubject_Id').val();
-            $('#deleteClassSectionModal #ClassSubject_Id').val(ClassSubject_Id);
+            $('#deleteClassSubjectModal #ClassSubject_Id').val(ClassSubject_Id);
         });
 
         //Get ClassSubject_Id for Edit Added By Absar
-        //$('#assignClassSubjectpage #edit').on('click', function () {
-        //    var id = $(this).parent().find('.ClassSubject_Id').val();
-        //    $.ajax({
+        $('#assignClassSubjectpage #edit').on('click', function () {
+            var id = $(this).parent().find('.ClassSubject_Id').val();
+            $.ajax({
 
-        //        type: 'GET',
-        //        url: '/admin/assignSection/editClassSection/' + id,
-        //        success: function (objassignSection) {
-        //           // debugger;
-        //            // objClass = JSON.stringify(objClass);
+                type: 'GET',
+                url: '/admin/assignSubject/editClassSubject/' + id,
+                success: function (objassignSubject) {
+                    debugger;
+                    // objClass = JSON.stringify(objClass);
 
-        //            //alert(objClass);
-        //            $('#editClassSectionModal #ClassSubject_Id').val(objassignSection.ClassSubject_Id);
-        //            $('#editClassSectionModal #Class_Id').val(objassignSection.class_Id);
-        //            $('#editClassSectionModal #Section_Id').val(objassignSection.section_Id);
+                    //alert(objClass);
+                    $('#editClassSubjectModal #ClassSubject_Id').val(objassignSubject.classSubject_Id);
+                    $('#editClassSubjectModal #Class_Id').val(objassignSubject.class_Id);
+                    $('#editClassSubjectModal #Section_Id').val(objassignSubject.section_Id);
+                    $('#editClassSubjectModal #Subject_Id').val(objassignSubject.subject_Id);
 
-        //        }
-        //    });
-        //});
+                }
+            });
+        });
 
         // Select/Deselect checkboxes
         var checkbox = $('table tbody input[type="checkbox"]');
