--- a/LMS/wwwroot/Dashboard/assets/css/now-ui-dashboard.css
+++ b/LMS/wwwroot/Dashboard/assets/css/now-ui-dashboard.css
@@ -560,8 +560,9 @@ fieldset[disabled] .navbar .navbar-nav>a.btn.active {
 }
 
 .btn-primary {
-  background-color: #5fcf80;
+  background-color: #566787;
   color: #FFFFFF;
+  font-size: 13px;
 }
 
 .btn-primary:hover,
@@ -627,7 +628,7 @@ fieldset[disabled] .btn-primary.active {
 }
 
 .btn-success {
-  background-color: #18ce0f;
+  background-color: #4b9c47;
   color: #FFFFFF;
 }
 
@@ -642,7 +643,7 @@ fieldset[disabled] .btn-primary.active {
 .show>.btn-success.dropdown-toggle,
 .show>.btn-success.dropdown-toggle:focus,
 .show>.btn-success.dropdown-toggle:hover {
-  background-color: #1beb11;
+  background-color: #278823;
   color: #FFFFFF;
   box-shadow: none;
   border-color: #1beb11;
@@ -828,7 +829,7 @@ fieldset[disabled] .btn-warning.active {
 }
 
 .btn-danger {
-  background-color: #FF3636;
+  background-color: #de6161;
   color: #FFFFFF;
 }
 
@@ -1848,12 +1849,12 @@ h6 {
 }
 
 a {
-  color: #5fcf80;
+  color: #184a79;
 }
 
 a:hover,
 a:focus {
-  color: #5fcf80;
+  color: #184a79;
 }
 
 h1,
@@ -2033,7 +2034,7 @@ a.text-gray:hover {
 body {
   color: #2c2c2c;
   font-size: 14px;
-  font-family: "Montserrat", "Helvetica Neue", Arial, sans-serif;
+  font-family: sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 }
@@ -3889,7 +3890,7 @@ Created using IcoMoon - icomoon.io
   position: relative;
   text-transform: uppercase;
   cursor: pointer;
-  font-size: 0.7142em;
+  font-size: 13px;
   padding: 10px 8px;
   line-height: 1.625rem;
 }
@@ -3905,7 +3906,7 @@ Created using IcoMoon - icomoon.io
   font-size: 15px;
   font-family: 'Nucleo Outline';
   font-weight: bold;    
-  color: #5a9b6d;
+  color: #fff;
 
 }
 ul.navigation > li ul {
@@ -3924,7 +3925,7 @@ ul.navigation > li ul {
 .sidebar .nav li:focus:not(.active)>a,
 .off-canvas-sidebar .nav li:hover:not(.active)>a,
 .off-canvas-sidebar .nav li:focus:not(.active)>a {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgb(174 124 56);
 }
 
 .sidebar .nav li:hover:not(.active)>a i,
@@ -3936,7 +3937,7 @@ ul.navigation > li ul {
 
 .sidebar .nav li.active>a,
 .off-canvas-sidebar .nav li.active>a {
-  background-color: #FFFFFF;
+  background-color: #ae7c38;
   box-shadow: 0 1px 15px 1px rgba(39, 39, 39, 0.1);
 }
 
@@ -4123,17 +4124,19 @@ ul.navigation > li ul {
 
 .sidebar[data-color="orange"]:after,
 .off-canvas-sidebar[data-color="orange"]:after {
-  background: #5fcf80;
+/*background: #0c2e4e;*/
+background: rgb(12,46,78);
+background: linear-gradient(0deg, rgba(12,46,78,1) 0%, rgba(25,77,126,1) 100%);
 }
 
 .sidebar[data-color="orange"] .nav li.active>a:not([data-toggle="collapse"]),
 .off-canvas-sidebar[data-color="orange"] .nav li.active>a:not([data-toggle="collapse"]) {
-  color: #5fcf80;
+  color: #fff;
 }
 
 .sidebar[data-color="orange"] .nav li.active>a:not([data-toggle="collapse"]) i,
 .off-canvas-sidebar[data-color="orange"] .nav li.active>a:not([data-toggle="collapse"]) i {
-  color: #5fcf80;
+  color: #fff;
 }
 
 .sidebar[data-color="red"]:after,
@@ -6306,3 +6309,16 @@ min-width: 100px;
 .modal form label {
 font-weight: normal;
 }	
+
+/*******Custom css***********/
+.main-logo{
+width: 100px;
+height: 100px;
+margin: 0px auto;
+text-align: center;
+display: block;
+}
+.has-child ul {
+  padding: 0px;
+  list-style: none;
+}
